# recreations

./: .gitignore  BUILD  README.md  WORKSPACE  go.mod  recreations.code-workspace
.devcontainer/: bootstrap.sh  devcontainer.json
code_practise/careercup/hrt/: fib.cpp  machine.cpp
code_practise/careercup/prob_1/: README.md
code_practise/careercup/prob_2/: README.md
code_practise/careercup/prob_3/: Solution.h
code_practise/careercup/two_sigma/: Solution.cpp
code_practise/cracking_code_interview/4/: main.cpp
code_practise/cracking_code_interview/5/: main.cpp
code_practise/cracking_code_interview/7/: main.cpp
code_practise/essentials/: main.cpp
code_practise/essentials/sorting/: mergesort.h  quicksort.h  selection.cpp
code_practise/hackerrank/Flowers/: main.cpp
code_practise/leetcode/: 00002.cpp  00005.cpp  00010.cpp  00011.cpp  00012.cpp  00013.cpp  00017.cpp  00018.cpp  00020.cpp  00022.cpp  00023.cpp  00025.cpp  00031.cpp  00033.cpp  00037.cpp  00046.cpp  00051.cpp  00053.cpp  00054.cpp  00059.cpp  00061.cpp  00062.cpp  00079.cpp  00080.cpp  00082.cpp  00085.cpp  00087.cpp  00088.cpp  00095.cpp  00096.cpp  00098.cpp  00102.cpp  00105.cpp  00108.cpp  00114.cpp  00115.cpp  00116.cpp  00117.cpp  00121.cpp  00122.cpp  (+274 more)
code_practise/poj/: 2991.cpp  3276.cpp
code_practise/uva/: README.txt  template.cpp
docs/design-pattern/: README.md
docs/systems/: cpp.md  os.md  selected-papers.md
random_notes/design-pattern/: Behavioral.md  Creation.md  Structural.md
random_notes/systems/: ds.md  storage.md
src/hello/go/: BUILD.bazel
src/hello/lib/: BUILD  (+2 more)
(+594 files in other folders)
